@@ -29,6 +29,9 @@
 * Taeer Bar-Yam <taeer@necsi.edu>: Allow any key name defined by GDK to
   be entered.
 
+* Thread-view: '*' toggle 'flagged' on message, 'a' toggle inbox on
+  whole thread.
+
 == v0.6 / 2016-07-23
 
 * Use any editor (general XEmbed support in edit-message window): Emacs
